force-app/main/default/objects/Knowledge__kav/fields/Politica_Conteudo__c.field-meta.xml
<CustomField>
    <fullName>Politica_Conteudo__c</fullName>
    <description>Corpo do artigo de politica de RH (markdown renderizado em HTML).</description>
    <label>Conteudo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>