force-app/main/default/objects/Knowledge__kav/fields/Politica_Fonte_Legal__c.field-meta.xml
<CustomField>
    <fullName>Politica_Fonte_Legal__c</fullName>
    <description>Artigos da CLT, leis e politicas internas que sustentam o artigo.</description>
    <label>Fonte Legal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>