force-app/main/default/objects/Knowledge__kav/fields/Politica_Ultima_Revisao__c.field-meta.xml
<CustomField>
    <fullName>Politica_Ultima_Revisao__c</fullName>
    <description>Data da ultima revisao da politica pelo RH.</description>
    <label>Ultima Revisao</label>
    <type>Date</type>
</CustomField>